# fedatlas

./: .env.example  .gitignore  Makefile  README.md  data_quality_report.md  index.html  pyproject.toml  requirements.txt  styles.css
.github/workflows/: deploy_shinyapps.yml  tests.yml  weekly_update.yml
config/: config.yaml  country_centroids.csv  dashboard.yaml  search_queries.yaml  venue_quality.csv
dashboard/: app.R  global.R
dashboard/modules/: code_gap.R  collaboration.R  methods.R  network.R  overview.R  repos.R  topics.R  venues.R
dashboard/www/: styles.css
data/processed/: dashboard_code_gap.csv  dashboard_country_map.csv  dashboard_kpis.csv  dashboard_timeseries.csv  dashboard_topic_year.csv
docs/: dashboard_wireframe.md  data_dictionary.md  demo_script.md  methodology.md
scripts/: 00_smoke_test.py  01_crawl_openalex.py  02_download_pwc.py  03_match_code_links.py  04_enrich_github.py  05_build_graph.py  06_compute_metrics.py  07_export_dashboard_data.py  08_weekly_update.py  09_deploy_shinyapps.R  import_venue_quality.py  run_pipeline.py
src/fedatlas/: __init__.py  config.py  country_codes.py  data_quality.py  github_client.py  graph_builder.py  logging_utils.py  matching.py  metrics.py  normalize.py  openalex_client.py  pwc_client.py  schemas.py  topic_classifier.py  utils.py  venue_quality.py
tests/: test_country_codes.py  test_graph_builder.py  test_matching.py  test_metrics.py  test_normalize.py  test_openalex_client.py  test_pipeline.py  test_topic_classifier.py  test_utils.py  test_venue_quality.py
tests/fixtures/: openalex_sample.json
