[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedatlas"
version = "0.1.0"
description = "Mapping the global research-to-code ecosystem of Federated Learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0,<3",
  "pyarrow>=14",
  "requests>=2.28",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "networkx>=3.0",
  "numpy>=1.24,<2"
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "rapidfuzz>=3.0", "python-louvain>=0.16"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
